// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bar-chart> rendered-html generic test suite accessibility: should not print accessibility console warnings and logs when accessibility.disableValidation set to true 1`] = `Array []`;

exports[`<bar-chart> rendered-html generic test suite accessibility: should not print accessibility console warnings and logs when accessibility.disableValidation set to true 2`] = `Array []`;

exports[`<bar-chart> rendered-html generic test suite accessibility: should not print accessibility console warnings and logs when accessibility.disableValidation set to true 3`] = `Array []`;

exports[`<bar-chart> rendered-html generic test suite accessibility: should print accessibility console warnings and logs when accessibility.disableValidation defaults to false 1`] = `
Array [
  Array [
    "%c longDescription: Either accessibility.longDescription or accessibility.contextExplanation is required",
    "color: #C6003F;font-size:medium;",
  ],
  Array [
    "%c executiveSummary: Either accessibility.purpose or accessibility.executiveSummary is required",
    "color: #C6003F;font-size:medium;",
  ],
  Array [
    "%c elementsAreInterface: accessibility.elementsAreInterface needs a boolean value either true or false",
    "color: #C6003F;font-size:medium;",
  ],
]
`;

exports[`<bar-chart> rendered-html generic test suite accessibility: should print accessibility console warnings and logs when accessibility.disableValidation defaults to false 2`] = `
Array [
  Array [
    "%c longDescription: Either accessibility.longDescription or accessibility.contextExplanation should have minimum 40 characters and a combined length between 40 and 500 characters",
    "font-size:medium;",
  ],
  Array [
    "%c executiveSummary: Either accessibility.purpose or accessibility.executiveSummary should have minimum 40 characters and a combined length between 40 and 250 characters",
    "font-size:medium;",
  ],
  Array [
    "%c statisticalNotes: accessibility.statisticalNotes should have length between 40 and 250 characters",
    "font-size:medium;",
  ],
  Array [
    "%c structureNotes: accessibility.structureNotes should have length between 40 and 250 characters",
    "font-size:medium;",
  ],
]
`;

exports[`<bar-chart> rendered-html generic test suite accessibility: should print accessibility console warnings and logs when accessibility.disableValidation defaults to false 3`] = `
Array [
  Array [
    "%c bar-chart-unit-test has accessibility warnings and other messages",
    "color: #C6003F;font-size:medium;",
  ],
]
`;

exports[`<bar-chart> rendered-html reference line should pass referenceLines prop 1`] = `
<g aria-hidden="true" class="bar-reference-line-group" data-testid="reference-line-group" focusable="false" role="presentation">
  <g class=".bar-reference" opacity="1" transform="translate(0,43.93803895226644)">
    <line class="bar-reference-line" opacity="0" x1="0" x2="541.5" y1="0" y2="0"></line>
    <text class="bar-reference-line-label" dx="-0.1em" dy="0.3em" opacity="0" text-anchor="end" x="0" y="0"></text>
  </g>
</g>
`;

exports[`<bar-chart> rendered-html reference line should pass referenceStyle prop 1`] = `null`;

exports[`<bar-chart> rendered-html render should render with minimal props[data,oridnalAccessor,valueAccessor] given 1`] = `
<bar-chart id="bar-chart-unit-test">
  <div class="is--vertical light o-layout">
    <div class="vcl-accessibility-instructions" id="chart-instructions-bar-chart-unit-test" style="position: absolute; width: 675px;">
      <p class="screen-reader-info vcl-region-label" tabindex="0">
        Keyboard interactive bar-chart, Titled: This is bar chart title. The next TAB will focus the chart area. Pressing ENTER once on the chart will enter it and focus the chart's first bar group. If there are multiple bar groups, they can be navigated among using ARROW keys. You may access the group's child bars by pressing ENTER again. You may then use the arrow keys to navigate among bars and SPACEBAR to select them. Use ESCAPE to drill up one level of the chart or TAB to leave it entirely. If you are using a screen reader, this section contains additional information and instructions.
      </p>
      <h2 class="screen-reader-info vcl-access-title">
        Chart title: This is bar chart title
      </h2>
      <h3 class="screen-reader-info vcl-access-subtitle">
        Chart subtitle: This is the bar chart subtitle
      </h3>
      <p class="screen-reader-info vcl-access-executive-summary" data-level="h3"></p>
      <p class="screen-reader-info vcl-access-purpose" data-level="h3"></p>
      <p class="screen-reader-info vcl-access-long-description" data-level="h3"></p>
      <p class="screen-reader-info vcl-access-context" data-level="h3"></p>
      <h3 class="screen-reader-info vcl-access-structure-heading">
        Structure
      </h3>
      <p class="screen-reader-info vcl-access-statistics" data-level="h4"></p>
      <h4 class="screen-reader-info vcl-access-chart-layout-heading">
        Chart Layout Description
      </h4>
      <p class="screen-reader-info vcl-access-layout">
        This is a bar-chart with 12 bars.
      </p>
      <p class="screen-reader-info vcl-access-xAxis">
        The chart has a horizontal X Axis, titled X Axis with a range that starts with Apr-17 and ends with Mar-18.
      </p>
      <p class="screen-reader-info vcl-access-yAxis">
        The chart has a vertical Y axis, titled Y Axis with a range that starts with 0 and ends with 8m.
      </p>
      <p class="screen-reader-info vcl-access-notes" data-annotationlevel="h3" data-level="h4"></p>
      <h3 class="screen-reader-info vcl-interaction-instructions">
        Interaction Instructions
      </h3>
      <p class="screen-reader-info">
        Use Regions/Landmarks or TAB to skip ahead to the chart area or the data table. The following subsections explain how to use this chart's interactivity.
      </p>
      <h4 class="screen-reader-info">
        Enabling this chart's interactivity
      </h4>
      <p class="screen-reader-info">
        Screen readers that are able to switch between Browse and Forms mode will need to turn on Forms mode once the chart area is reached.
      </p>
      <h4 class="screen-reader-info">
        Using the TAB key outside the Chart area and Exposing new Layers with the ENTER key
      </h4>
      <p class="screen-reader-info">
        Each chart has three main TAB areas at first: the information and instructions (which is this), the chart area, and the data table. You may TAB out of this section to the chart area at any time. Once on the chart area, you may focus the chart's first bar group by pressing ENTER. Doing this will navigate you into the chart area, which enables you to use the ARROW keys focus new elements.
      </p>
      <h4 class="screen-reader-info">
        Using the ESCAPE key
      </h4>
      <p class="screen-reader-info">
        When in the chart area, pressing the ESCAPE key will always move your keyboard focus to the parent of the bar or bar group you are currently on, until you reach the root of the chart.
      </p>
      <h4 class="screen-reader-info">
        Exploring Sibling Groups and Elements with LEFT and RIGHT
      </h4>
      <p class="screen-reader-info">
        When in the chart area, pressing RIGHT ARROW will move your focus to the next available bar or bar group at the same level, within the same group. If there is not another bar or bar group at the same level within your group, focus will move back to the first bar or bar group among the siblings to your bar or bar group. Pressing LEFT ARROW works in the same circular manner, but in reverse. This functionality is intended to allow easier comparison and navigation among siblings at the beginning and end of a group without leaving the group. This can be helpful when elements are sorted or ordered, because you can jump from the first to last elements easily.
      </p>
      <h4 class="screen-reader-info">
        Selecting Elements with SPACEBAR
      </h4>
      <p class="screen-reader-info">
        If a bar is selectable and that selection causes something to happen, it will be marked up as a BUTTON and you may select it using SPACEBAR. Note that if you use SPACEBAR while on a bar group, it will have no effect. Only using SPACEBAR on a bar may have effects.)
      </p>
    </div>
    <div class="o-layout--chart">
      <h2 class="bar-main-title vcl-main-title" data-testid="main-title">
        This is bar chart title
      </h2>
      <p class="bar-sub-title vcl-sub-title visa-ui-text--instructions" data-testid="sub-title">
        This is the bar chart subtitle
      </p>
      <div aria-hidden="true" class="bar-legend vcl-legend" role="presentation" style="display: none;">
        <svg aria-hidden="true" class="vcl-svg" data-testid="legend-container" focusable="false" height="0" opacity="0" role="presentation" viewBox="0 0 659.5 0" width="659.5" style="display: none;">
          <g class="legend-padding-wrapper" transform="translate(1,1)">
            <g class="bar legend">
              <rect class="bar-rect" height="20" opacity="0" width="20"></rect>
              <text class="bar-text" dx=".2em" dy="16" opacity="0"></text>
            </g>
          </g>
        </svg>
      </div>
      <div class="visa-viz-d3-bar-container" data-testid="chart-container">
        <div aria-label="This is bar chart title. This is the bar chart subtitle.  Navigate into the chart area by pressing ENTER. ID: bar-chart-unit-test" class="VCL-controller screen-reader-info" id="chart-area-bar-chart-unit-test" role="application" tabindex="0">
          Interactive bar-chart.
        </div>
        <svg class="vcl-svg" data-testid="root-svg" focusable="false" height="325" role="presentation" tabindex="-1" viewBox="0 0 675 325" width="675" style="overflow: hidden;">
          <g data-testid="margin-container" id="visa-viz-margin-container-g-bar-chart-unit-test">
            <g data-testid="padding-container" id="visa-viz-padding-container-g-bar-chart-unit-test">
              <g aria-hidden="true" class="grid-group" focusable="false" role="presentation">
                <g class="bottom grid" data-testid="grid-bottom" fill="none" font-family="sans-serif" font-size="10" text-anchor="middle">
                  <path class="domain" stroke="currentColor"></path>
                  <g class="tick" opacity="0.000001" transform="translate(26.631147540983584,0)">
                    <line stroke="currentColor" y2="248.5"></line>
                    <text dy="0.71em" fill="currentColor" y="251.5"></text>
                  </g>
                  <g class="tick" opacity="0.000001" transform="translate(71.01639344262293,0)">
                    <line stroke="currentColor" y2="248.5"></line>
                    <text dy="0.71em" fill="currentColor" y="251.5"></text>
                  </g>
                  <g class="tick" opacity="0.000001" transform="translate(115.40163934426226,0)">
                    <line stroke="currentColor" y2="248.5"></line>
                    <text dy="0.71em" fill="currentColor" y="251.5"></text>
                  </g>
                  <g class="tick" opacity="0.000001" transform="translate(159.78688524590163,0)">
                    <line stroke="currentColor" y2="248.5"></line>
                    <text dy="0.71em" fill="currentColor" y="251.5"></text>
                  </g>
                  <g class="tick" opacity="0.000001" transform="translate(204.17213114754097,0)">
                    <line stroke="currentColor" y2="248.5"></line>
                    <text dy="0.71em" fill="currentColor" y="251.5"></text>
                  </g>
                  <g class="tick" opacity="0.000001" transform="translate(248.5573770491803,0)">
                    <line stroke="currentColor" y2="248.5"></line>
                    <text dy="0.71em" fill="currentColor" y="251.5"></text>
                  </g>
                  <g class="tick" opacity="0.000001" transform="translate(292.94262295081967,0)">
                    <line stroke="currentColor" y2="248.5"></line>
                    <text dy="0.71em" fill="currentColor" y="251.5"></text>
                  </g>
                  <g class="tick" opacity="0.000001" transform="translate(337.327868852459,0)">
                    <line stroke="currentColor" y2="248.5"></line>
                    <text dy="0.71em" fill="currentColor" y="251.5"></text>
                  </g>
                  <g class="tick" opacity="0.000001" transform="translate(381.71311475409834,0)">
                    <line stroke="currentColor" y2="248.5"></line>
                    <text dy="0.71em" fill="currentColor" y="251.5"></text>
                  </g>
                  <g class="tick" opacity="0.000001" transform="translate(426.0983606557377,0)">
                    <line stroke="currentColor" y2="248.5"></line>
                    <text dy="0.71em" fill="currentColor" y="251.5"></text>
                  </g>
                  <g class="tick" opacity="0.000001" transform="translate(470.483606557377,0)">
                    <line stroke="currentColor" y2="248.5"></line>
                    <text dy="0.71em" fill="currentColor" y="251.5"></text>
                  </g>
                  <g class="tick" opacity="0.000001" transform="translate(514.8688524590164,0)">
                    <line stroke="currentColor" y2="248.5"></line>
                    <text dy="0.71em" fill="currentColor" y="251.5"></text>
                  </g>
                </g>
                <g class="grid left" data-testid="grid-left" fill="none" font-family="sans-serif" font-size="10" text-anchor="end">
                  <path class="domain" stroke="currentColor"></path>
                  <g class="tick" opacity="0.000001" transform="translate(0,249)">
                    <line stroke="currentColor" x2="541.5"></line>
                    <text dy="0.32em" fill="currentColor" x="-3"></text>
                  </g>
                  <g class="tick" opacity="0.000001" transform="translate(0,219.77686270746665)">
                    <line stroke="currentColor" x2="541.5"></line>
                    <text dy="0.32em" fill="currentColor" x="-3"></text>
                  </g>
                  <g class="tick" opacity="0.000001" transform="translate(0,190.55372541493327)">
                    <line stroke="currentColor" x2="541.5"></line>
                    <text dy="0.32em" fill="currentColor" x="-3"></text>
                  </g>
                  <g class="tick" opacity="0.000001" transform="translate(0,161.3305881223999)">
                    <line stroke="currentColor" x2="541.5"></line>
                    <text dy="0.32em" fill="currentColor" x="-3"></text>
                  </g>
                  <g class="tick" opacity="0.000001" transform="translate(0,132.10745082986654)">
                    <line stroke="currentColor" x2="541.5"></line>
                    <text dy="0.32em" fill="currentColor" x="-3"></text>
                  </g>
                  <g class="tick" opacity="0.000001" transform="translate(0,102.88431353733317)">
                    <line stroke="currentColor" x2="541.5"></line>
                    <text dy="0.32em" fill="currentColor" x="-3"></text>
                  </g>
                  <g class="tick" opacity="0.000001" transform="translate(0,73.66117624479982)">
                    <line stroke="currentColor" x2="541.5"></line>
                    <text dy="0.32em" fill="currentColor" x="-3"></text>
                  </g>
                  <g class="tick" opacity="0.000001" transform="translate(0,44.43803895226644)">
                    <line stroke="currentColor" x2="541.5"></line>
                    <text dy="0.32em" fill="currentColor" x="-3"></text>
                  </g>
                  <g class="tick" opacity="0.000001" transform="translate(0,15.21490165973309)">
                    <line stroke="currentColor" x2="541.5"></line>
                    <text dy="0.32em" fill="currentColor" x="-3"></text>
                  </g>
                </g>
              </g>
              <g class="bar-group" data-testid="bar-group" focusable="false" id="bar-chart-unit-test-123457-123457-123457" role="presentation" tabindex="-1">
                <rect class="bar" cursor="default" data-id="bar-Apr-17" data-role="img" data-testid="bar" fill="url(#bar-chart-unit-test_texture_0)" filter="url(#VCL-filter-226092-rest-bar-chart-unit-test)" focusable="false" height="41.132822334144294" id="bar-chart-unit-test-123457-123457-123457" opacity="1" role="presentation" rx="0" ry="0" tabindex="-1" width="35.50819672131148" x="8.877049180327845" y="207.3671776658557"></rect>
                <rect class="bar" cursor="default" data-id="bar-May-17" data-role="img" data-testid="bar" fill="url(#bar-chart-unit-test_texture_0)" filter="url(#VCL-filter-226092-rest-bar-chart-unit-test)" focusable="false" height="176.5755469254202" id="bar-chart-unit-test-123457-123457-123457" opacity="1" role="presentation" rx="0" ry="0" tabindex="-1" width="35.50819672131148" x="53.26229508196719" y="71.92445307457979"></rect>
                <rect class="bar" cursor="default" data-id="bar-Jun-17" data-role="img" data-testid="bar" fill="url(#bar-chart-unit-test_texture_0)" filter="url(#VCL-filter-226092-rest-bar-chart-unit-test)" focusable="false" height="94.5076844503275" id="bar-chart-unit-test-123457-123457-123457" opacity="1" role="presentation" rx="0" ry="0" tabindex="-1" width="35.50819672131148" x="97.64754098360653" y="153.9923155496725"></rect>
                <rect class="bar" cursor="default" data-id="bar-Jul-17" data-role="img" data-testid="bar" fill="url(#bar-chart-unit-test_texture_0)" filter="url(#VCL-filter-226092-rest-bar-chart-unit-test)" focusable="false" height="64.91139691770576" id="bar-chart-unit-test-123457-123457-123457" opacity="1" role="presentation" rx="0" ry="0" tabindex="-1" width="35.50819672131148" x="142.03278688524588" y="183.58860308229424"></rect>
                <rect class="bar" cursor="default" data-id="bar-Aug-17" data-role="img" data-testid="bar" fill="url(#bar-chart-unit-test_texture_0)" filter="url(#VCL-filter-226092-rest-bar-chart-unit-test)" focusable="false" height="130.81214314845025" id="bar-chart-unit-test-123457-123457-123457" opacity="1" role="presentation" rx="0" ry="0" tabindex="-1" width="35.50819672131148" x="186.41803278688522" y="117.68785685154975"></rect>
                <rect class="bar" cursor="default" data-id="bar-Sep-17" data-role="img" data-testid="bar" fill="url(#bar-chart-unit-test_texture_0)" filter="url(#VCL-filter-226092-rest-bar-chart-unit-test)" focusable="false" height="110.73292551475055" id="bar-chart-unit-test-123457-123457-123457" opacity="1" role="presentation" rx="0" ry="0" tabindex="-1" width="35.50819672131148" x="230.80327868852456" y="137.76707448524945"></rect>
                <rect class="bar" cursor="default" data-id="bar-Oct-17" data-role="img" data-testid="bar" fill="url(#bar-chart-unit-test_texture_0)" filter="url(#VCL-filter-226092-rest-bar-chart-unit-test)" focusable="false" height="191.22262168349732" id="bar-chart-unit-test-123457-123457-123457" opacity="1" role="presentation" rx="0" ry="0" tabindex="-1" width="35.50819672131148" x="275.1885245901639" y="57.27737831650268"></rect>
                <rect class="bar" cursor="default" data-id="bar-Nov-17" data-role="img" data-testid="bar" fill="url(#bar-chart-unit-test_texture_0)" filter="url(#VCL-filter-226092-rest-bar-chart-unit-test)" focusable="false" height="217.92955918573168" id="bar-chart-unit-test-123457-123457-123457" opacity="1" role="presentation" rx="0" ry="0" tabindex="-1" width="35.50819672131148" x="319.57377049180326" y="30.57044081426832"></rect>
                <rect class="bar" cursor="default" data-id="bar-Dec-17" data-role="img" data-testid="bar" fill="url(#bar-chart-unit-test_texture_0)" filter="url(#VCL-filter-226092-rest-bar-chart-unit-test)" focusable="false" height="77.04230110862119" id="bar-chart-unit-test-123457-123457-123457" opacity="1" role="presentation" rx="0" ry="0" tabindex="-1" width="35.50819672131148" x="363.9590163934426" y="171.4576988913788"></rect>
                <rect class="bar" cursor="default" data-id="bar-Jan-18" data-role="img" data-testid="bar" fill="url(#bar-chart-unit-test_texture_0)" filter="url(#VCL-filter-226092-rest-bar-chart-unit-test)" focusable="false" height="68.38214126452806" id="bar-chart-unit-test-123457-123457-123457" opacity="1" role="presentation" rx="0" ry="0" tabindex="-1" width="35.50819672131148" x="408.34426229508193" y="180.11785873547194"></rect>
                <rect class="bar" cursor="default" data-id="bar-Feb-18" data-role="img" data-testid="bar" fill="url(#bar-chart-unit-test_texture_0)" filter="url(#VCL-filter-226092-rest-bar-chart-unit-test)" focusable="false" height="93.5824214773713" id="bar-chart-unit-test-123457-123457-123457" opacity="1" role="presentation" rx="0" ry="0" tabindex="-1" width="35.50819672131148" x="452.72950819672127" y="154.9175785226287"></rect>
                <rect class="bar" cursor="default" data-id="bar-Mar-18" data-role="img" data-testid="bar" fill="url(#bar-chart-unit-test_texture_0)" filter="url(#VCL-filter-226092-rest-bar-chart-unit-test)" focusable="false" height="248.5" id="bar-chart-unit-test-123457-123457-123457" opacity="1" role="presentation" rx="0" ry="0" tabindex="-1" width="35.50819672131148" x="497.1147540983606" y="0"></rect>
              </g>
              <g aria-hidden="true" class="bar-dataLabel-group" data-testid="dataLabel-group" focusable="false" role="presentation">
                <text class="bar-dataLabel entering" cursor="default" data-id="label-Apr-17" data-testid="dataLabel" fill="#222222" filter="url(#VCL-t-s-f-ffffffbar-chart-unit-test)" opacity="1">
                  1.4m
                </text>
                <text class="bar-dataLabel entering" cursor="default" data-id="label-May-17" data-testid="dataLabel" fill="#222222" filter="url(#VCL-t-s-f-ffffffbar-chart-unit-test)" opacity="1">
                  6m
                </text>
                <text class="bar-dataLabel entering" cursor="default" data-id="label-Jun-17" data-testid="dataLabel" fill="#222222" filter="url(#VCL-t-s-f-ffffffbar-chart-unit-test)" opacity="1">
                  3.2m
                </text>
                <text class="bar-dataLabel entering" cursor="default" data-id="label-Jul-17" data-testid="dataLabel" fill="#222222" filter="url(#VCL-t-s-f-ffffffbar-chart-unit-test)" opacity="1">
                  2.2m
                </text>
                <text class="bar-dataLabel entering" cursor="default" data-id="label-Aug-17" data-testid="dataLabel" fill="#222222" filter="url(#VCL-t-s-f-ffffffbar-chart-unit-test)" opacity="1">
                  4.5m
                </text>
                <text class="bar-dataLabel entering" cursor="default" data-id="label-Sep-17" data-testid="dataLabel" fill="#222222" filter="url(#VCL-t-s-f-ffffffbar-chart-unit-test)" opacity="1">
                  3.8m
                </text>
                <text class="bar-dataLabel entering" cursor="default" data-id="label-Oct-17" data-testid="dataLabel" fill="#222222" filter="url(#VCL-t-s-f-ffffffbar-chart-unit-test)" opacity="1">
                  6.5m
                </text>
                <text class="bar-dataLabel entering" cursor="default" data-id="label-Nov-17" data-testid="dataLabel" fill="#222222" filter="url(#VCL-t-s-f-ffffffbar-chart-unit-test)" opacity="1">
                  7.5m
                </text>
                <text class="bar-dataLabel entering" cursor="default" data-id="label-Dec-17" data-testid="dataLabel" fill="#222222" filter="url(#VCL-t-s-f-ffffffbar-chart-unit-test)" opacity="1">
                  2.6m
                </text>
                <text class="bar-dataLabel entering" cursor="default" data-id="label-Jan-18" data-testid="dataLabel" fill="#222222" filter="url(#VCL-t-s-f-ffffffbar-chart-unit-test)" opacity="1">
                  2.3m
                </text>
                <text class="bar-dataLabel entering" cursor="default" data-id="label-Feb-18" data-testid="dataLabel" fill="#222222" filter="url(#VCL-t-s-f-ffffffbar-chart-unit-test)" opacity="1">
                  3.2m
                </text>
                <text class="bar-dataLabel entering" cursor="default" data-id="label-Mar-18" data-testid="dataLabel" fill="#222222" filter="url(#VCL-t-s-f-ffffffbar-chart-unit-test)" opacity="1">
                  8.5m
                </text>
              </g>
              <g aria-hidden="true" class="bar-reference-line-group" data-testid="reference-line-group" focusable="false" role="presentation"></g>
              <g aria-hidden="true" class="axis bottom x" data-testid="x-axis" fill="none" focusable="false" font-family="sans-serif" font-size="10" role="presentation" text-anchor="middle">
                <path class="domain" stroke="currentColor"></path>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(26.631147540983584,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.71em" x="0" y="10">
                      Apr-17
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(71.01639344262293,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.71em" x="0" y="10">
                      May-17
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(115.40163934426226,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.71em" x="0" y="10">
                      Jun-17
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(159.78688524590163,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.71em" x="0" y="10">
                      Jul-17
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(204.17213114754097,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.71em" x="0" y="10">
                      Aug-17
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(248.5573770491803,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.71em" x="0" y="10">
                      Sep-17
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(292.94262295081967,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.71em" x="0" y="10">
                      Oct-17
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(337.327868852459,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.71em" x="0" y="10">
                      Nov-17
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(381.71311475409834,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.71em" x="0" y="10">
                      Dec-17
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(426.0983606557377,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.71em" x="0" y="10">
                      Jan-18
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(470.483606557377,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.71em" x="0" y="10">
                      Feb-18
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(514.8688524590164,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.71em" x="0" y="10">
                      Mar-18
                    </tspan>
                  </text>
                </g>
              </g>
              <text aria-hidden="true" class="axis-label bottom x" data-testid="x-axis-label" focusable="false" role="presentation" transform="translate(0, 0)">
                X Axis
              </text>
              <g aria-hidden="true" class="axis left y" data-testid="y-axis" fill="none" focusable="false" font-family="sans-serif" font-size="10" role="presentation" text-anchor="end">
                <path class="domain" stroke="currentColor"></path>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(0,249)">
                  <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.32em" x="-8">
                      0
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(0,219.77686270746665)">
                  <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.32em" x="-8">
                      1m
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(0,190.55372541493327)">
                  <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.32em" x="-8">
                      2m
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(0,161.3305881223999)">
                  <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.32em" x="-8">
                      3m
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(0,132.10745082986654)">
                  <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.32em" x="-8">
                      4m
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(0,102.88431353733317)">
                  <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.32em" x="-8">
                      5m
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(0,73.66117624479982)">
                  <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.32em" x="-8">
                      6m
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(0,44.43803895226644)">
                  <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.32em" x="-8">
                      7m
                    </tspan>
                  </text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(0,15.21490165973309)">
                  <line data-testid="axis-tick-line" stroke="currentColor" x2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.32em" fill="currentColor" x="-10">
                    <tspan data-testid="axis-tick-text-tspan" dy="0.32em" x="-8">
                      8m
                    </tspan>
                  </text>
                </g>
              </g>
              <text aria-hidden="true" class="axis-label left y" data-testid="y-axis-label" focusable="false" role="presentation" transform="rotate(-90)">
                Y Axis
              </text>
              <g aria-hidden="true" class="vcl-annotation-group" data-testid="annotation-group" focusable="false" role="presentation"></g>
              <g aria-hidden="true" class="editable vcl-annotation-group" data-testid="editable-annotation-group" focusable="false" role="presentation"></g>
              <g aria-hidden="true" class="axis-mark axis-mark-x" data-testid="x-axis-mark" fill="none" focusable="false" font-family="sans-serif" font-size="10" role="presentation" text-anchor="middle">
                <path class="domain" stroke="currentColor"></path>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(26.631147540983584,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10"></text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(71.01639344262293,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10"></text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(115.40163934426226,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10"></text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(159.78688524590163,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10"></text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(204.17213114754097,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10"></text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(248.5573770491803,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10"></text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(292.94262295081967,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10"></text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(337.327868852459,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10"></text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(381.71311475409834,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10"></text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(426.0983606557377,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10"></text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(470.483606557377,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10"></text>
                </g>
                <g class="tick" data-testid="axis-tick" opacity="0.000001" transform="translate(514.8688524590164,0)">
                  <line data-testid="axis-tick-line" stroke="currentColor" y2="0"></line>
                  <text data-testid="axis-tick-text" dy="0.71em" fill="currentColor" y="10"></text>
                </g>
              </g>
            </g>
          </g>
          <defs data-testid="pattern-defs">
            <filter class="vcl-inversion-filter" color-interpolation-filters="sRGB" id="inversion-bar-chart-unit-test">
              <feColorMatrix in="SourceGraphic" type="matrix" values="-1 0 0 0 1 
        0 -1 0 0 1 
        0 0 -1 0 1
        0 0 0 1 0"></feColorMatrix>
              <feColorMatrix type="hueRotate" values="180"></feColorMatrix>
            </filter>
            <pattern class="VCL-texture-pattern" height="12" id="bar-chart-unit-test_texture_0" patternContentUnits="userSpaceOnUse" patternUnits="userSpaceOnUse" width="12" x="0" y="0">
              <rect class="VCL-t-p-e" fill="#226092" height="12" width="12"></rect>
              <path class="VCL-t-p-e" d="M 0,0 l 12,12 M -3,9 l 6,6 M 9,-3 l 6,6" shape-rendering="auto" stroke="#80b6e1" stroke-linecap="square" stroke-width="1"></path>
            </pattern>
            <filter class="VCL-accessibility-stroke-filter" id="VCL-filter-226092-rest-bar-chart-unit-test">
              <feMorphology in="SourceAlpha" operator="dilate" radius="1" result="outside-morph"></feMorphology>
              <feFlood flood-color="#ffffff" result="outside-color"></feFlood>
              <feComposite in="outside-color" in2="outside-morph" operator="in" result="outside-stroke"></feComposite>
              <feMorphology in="SourceAlpha" operator="erode" radius="0" result="edge-morph"></feMorphology>
              <feFlood flood-color="#226092" result="edge-color"></feFlood>
              <feComposite in="edge-color" in2="edge-morph" operator="in" result="edge-stroke"></feComposite>
              <feMorphology in="SourceAlpha" operator="erode" radius="1" result="primary-morph"></feMorphology>
              <feFlood flood-color="#226092" result="primary-color"></feFlood>
              <feComposite in="primary-color" in2="primary-morph" operator="in" result="primary-stroke"></feComposite>
              <feMorphology in="SourceAlpha" operator="erode" radius="1" result="clean-morph"></feMorphology>
              <feFlood flood-color="#226092" result="clean-color"></feFlood>
              <feComposite in="clean-color" in2="clean-morph" operator="in" result="clean-stroke"></feComposite>
              <feMorphology in="SourceAlpha" operator="erode" radius="2" result="morph-erode-2"></feMorphology>
              <feComposite in="SourceGraphic" in2="morph-erode-2" operator="in" result="fill"></feComposite>
              <feMerge>
                <feMergeNode in="outside-stroke"></feMergeNode>
                <feMergeNode in="edge-stroke"></feMergeNode>
                <feMergeNode in="primary-stroke"></feMergeNode>
                <feMergeNode in="clean-stroke"></feMergeNode>
                <feMergeNode in="fill"></feMergeNode>
              </feMerge>
            </filter>
            <filter class="VCL-accessibility-stroke-filter" id="VCL-filter-226092-hover-bar-chart-unit-test">
              <feMorphology in="SourceAlpha" operator="dilate" radius="1" result="outside-morph"></feMorphology>
              <feFlood flood-color="#ffffff" result="outside-color"></feFlood>
              <feComposite in="outside-color" in2="outside-morph" operator="in" result="outside-stroke"></feComposite>
              <feMorphology in="SourceAlpha" operator="erode" radius="0" result="edge-morph"></feMorphology>
              <feFlood flood-color="#226092" result="edge-color"></feFlood>
              <feComposite in="edge-color" in2="edge-morph" operator="in" result="edge-stroke"></feComposite>
              <feMorphology in="SourceAlpha" operator="erode" radius="1" result="primary-morph"></feMorphology>
              <feFlood flood-color="#226092" result="primary-color"></feFlood>
              <feComposite in="primary-color" in2="primary-morph" operator="in" result="primary-stroke"></feComposite>
              <feMorphology in="SourceAlpha" operator="erode" radius="3" result="clean-morph"></feMorphology>
              <feFlood flood-color="#226092" result="clean-color"></feFlood>
              <feComposite in="clean-color" in2="clean-morph" operator="in" result="clean-stroke"></feComposite>
              <feMorphology in="SourceAlpha" operator="erode" radius="4" result="morph-erode-4"></feMorphology>
              <feComposite in="SourceGraphic" in2="morph-erode-4" operator="in" result="fill"></feComposite>
              <feMerge>
                <feMergeNode in="outside-stroke"></feMergeNode>
                <feMergeNode in="edge-stroke"></feMergeNode>
                <feMergeNode in="primary-stroke"></feMergeNode>
                <feMergeNode in="clean-stroke"></feMergeNode>
                <feMergeNode in="fill"></feMergeNode>
              </feMerge>
            </filter>
            <filter class="VCL-accessibility-stroke-filter" id="VCL-filter-80b6e1-click-bar-chart-unit-test">
              <feMorphology in="SourceAlpha" operator="dilate" radius="1" result="outside-morph"></feMorphology>
              <feFlood flood-color="#ffffff" result="outside-color"></feFlood>
              <feComposite in="outside-color" in2="outside-morph" operator="in" result="outside-stroke"></feComposite>
              <feMorphology in="SourceAlpha" operator="erode" radius="0" result="edge-morph"></feMorphology>
              <feFlood flood-color="#226092" result="edge-color"></feFlood>
              <feComposite in="edge-color" in2="edge-morph" operator="in" result="edge-stroke"></feComposite>
              <feMorphology in="SourceAlpha" operator="erode" radius="1" result="primary-morph"></feMorphology>
              <feFlood flood-color="#80b6e1" result="primary-color"></feFlood>
              <feComposite in="primary-color" in2="primary-morph" operator="in" result="primary-stroke"></feComposite>
              <feMorphology in="SourceAlpha" operator="erode" radius="3" result="clean-morph"></feMorphology>
              <feFlood flood-color="#226092" result="clean-color"></feFlood>
              <feComposite in="clean-color" in2="clean-morph" operator="in" result="clean-stroke"></feComposite>
              <feMorphology in="SourceAlpha" operator="erode" radius="4" result="morph-erode-4"></feMorphology>
              <feComposite in="SourceGraphic" in2="morph-erode-4" operator="in" result="fill"></feComposite>
              <feMerge>
                <feMergeNode in="outside-stroke"></feMergeNode>
                <feMergeNode in="edge-stroke"></feMergeNode>
                <feMergeNode in="primary-stroke"></feMergeNode>
                <feMergeNode in="clean-stroke"></feMergeNode>
                <feMergeNode in="fill"></feMergeNode>
              </feMerge>
            </filter>
            <filter class="VCL-t-s-f-ffffff" id="VCL-t-s-f-ffffffbar-chart-unit-test">
              <feMorphology in="SourceAlpha" operator="dilate" radius="1.5" result="dilatedText"></feMorphology>
              <feFlood flood-color="#ffffff" flood-opacity="1" result="whiteTextFlood"></feFlood>
              <feComposite in="whiteTextFlood" in2="dilatedText" operator="in" result="textOutline"></feComposite>
              <feMerge>
                <feMergeNode in="textOutline"></feMergeNode>
                <feMergeNode in="textOutline"></feMergeNode>
                <feMergeNode in="textOutline"></feMergeNode>
                <feMergeNode in="SourceGraphic"></feMergeNode>
              </feMerge>
            </filter>
          </defs>
        </svg>
      </div>
      <div class="bar-tooltip vcl-tooltip" data-testid="tooltip-container" style="display: block; position: absolute; padding: 0.5rem; opacity: 0; background-color: #ffffff; font-size: 14px; font-weight: 400; color: #222222; border: 1px solid #565656; border-radius: 3px; pointer-events: none; min-width: 80px; max-width: 300px;">
        <p style="margin: 0;"></p>
      </div>
      <data-table iscompact="" uniqueid="bar-chart-unit-test" unittest=""></data-table>
    </div>
  </div>
</bar-chart>
`;
